<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.google.cloud</groupId>
  <artifactId>google-cloud-firestore-parent</artifactId>
  <packaging>pom</packaging>
  <version>3.3.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-firestore:current} -->
  <name>Google Cloud Firestore Parent</name>
  <url>https://github.com/googleapis/java-firestore</url>
  <description>
    Java idiomatic client for Google Cloud Platform services.
  </description>

  <parent>
    <groupId>com.google.cloud</groupId>
    <artifactId>google-cloud-shared-config</artifactId>
    <version>1.5.0</version>
  </parent>

  <developers>
    <developer>
      <id>garrettjonesgoogle</id>
      <name>Garrett Jones</name>
      <email>garrettjones@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>pongad</id>
      <name>Michael Darakananda</name>
      <email>pongad@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>shinfan</id>
      <name>Shin Fan</name>
      <email>shinfan@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>michaelbausor</id>
      <name>Micheal Bausor</name>
      <email>michaelbausor@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>vam-google</id>
      <name>Vadym Matsishevskyi</name>
      <email>vam@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>tswast</id>
      <name>Tim Swast</name>
      <email>tswast@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>neozwu</id>
      <name>Neo Wu</name>
      <email>neowu@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>lesv</id>
      <name>Les Vogel</name>
      <email>lesv@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>schmidt_sebastian</id>
      <name>Sebastian Schmidt</name>
      <email>mrschmidt@google.com</email>
      <organization>Google</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>andreamlin</id>
      <name>Andrea Lin</name>
      <email>andrealin@google.com</email>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <id>hzyi-google</id>
      <name>Hanzhen Yi</name>
      <email>hzyi@google.com</email>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>
  <organization>
    <name>Google LLC</name>
  </organization>
  <scm>
    <connection>scm:git:git@github.com:googleapis/java-firestore.git</connection>
    <developerConnection>scm:git:git@github.com:googleapis/java-firestore.git</developerConnection>
    <url>https://github.com/googleapis/java-firestore</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <url>https://github.com/googleapis/java-firestore/issues</url>
    <system>GitHub Issues</system>
  </issueManagement>

  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <github.global.server>github</github.global.server>
    <site.installationModule>google-cloud-firestore-parent</site.installationModule>
    <project.javadoc.protobufBaseURL>https://googleapis.dev/java/google-api-grpc/latest</project.javadoc.protobufBaseURL>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.api.grpc</groupId>
        <artifactId>proto-google-cloud-firestore-admin-v1</artifactId>
        <version>3.3.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-firestore-admin-v1:current} -->
      </dependency>
      <dependency>
        <groupId>com.google.cloud</groupId>
        <artifactId>google-cloud-firestore</artifactId>
        <version>3.3.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-firestore:current} -->
      </dependency>
      <dependency>
        <groupId>com.google.cloud</groupId>
        <artifactId>proto-google-cloud-firestore-bundle-v1</artifactId>
        <version>3.3.1-SNAPSHOT</version><!-- {x-version-update:google-cloud-firestore:current} -->
      </dependency>
      <dependency>
        <groupId>com.google.api.grpc</groupId>
        <artifactId>proto-google-cloud-firestore-v1</artifactId>
        <version>3.3.1-SNAPSHOT</version><!-- {x-version-update:proto-google-cloud-firestore-v1:current} -->
      </dependency>
      <dependency>
        <groupId>com.google.api.grpc</groupId>
        <artifactId>grpc-google-cloud-firestore-admin-v1</artifactId>
        <version>3.3.1-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-firestore-admin-v1:current} -->
      </dependency>
      <dependency>
        <groupId>com.google.api.grpc</groupId>
        <artifactId>grpc-google-cloud-firestore-v1</artifactId>
        <version>3.3.1-SNAPSHOT</version><!-- {x-version-update:grpc-google-cloud-firestore-v1:current} -->
      </dependency>

      <dependency>
        <groupId>com.google.cloud</groupId>
        <artifactId>google-cloud-shared-dependencies</artifactId>
        <version>2.13.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.google.truth</groupId>
        <artifactId>truth</artifactId>
        <version>1.1.3</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>google-cloud-firestore</module>
    <module>grpc-google-cloud-firestore-admin-v1</module>
    <module>grpc-google-cloud-firestore-v1</module>
    <module>proto-google-cloud-firestore-admin-v1</module>
    <module>proto-google-cloud-firestore-v1</module>
    <module>proto-google-cloud-firestore-bundle-v1</module>
    <module>google-cloud-firestore-admin</module>
    <module>google-cloud-firestore-bom</module>
  </modules>

  <reporting>
  <plugins>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-javadoc-plugin</artifactId>
      <version>3.4.0</version>
      <reportSets>
        <reportSet>
          <id>html</id>
          <reports>
            <report>aggregate</report>
            <report>javadoc</report>
          </reports>
        </reportSet>
      </reportSets>
      <configuration>
        <source>8</source>
        <links combine.self="override">
          <link>https://googleapis.dev/java/api-common/latest/</link>
          <link>https://googleapis.dev/java/gax/latest/</link>
          <link>https://googleapis.dev/java/google-auth-library/latest/</link>
          <link>https://developers.google.com/protocol-buffers/docs/reference/java/</link>
        </links>
        <sourceFileExcludes>
          <exclude>com/google/cloud/firestore/v1/package-info.java</exclude>
        </sourceFileExcludes>
      </configuration>
    </plugin>
  </plugins>
</reporting>

  <profiles>
    <profile>
      <id>enable-samples</id>
      <modules>
        <module>samples</module>
      </modules>
    </profile>
    <profile>
      <!-- cloud RAD generation -->
      <id>docFX</id>
      <properties>
        <!-- exclude file causing error generating doc -->
        <sourceFileExclude>com/google/cloud/firestore/v1/package-info.java</sourceFileExclude>
      </properties>
    </profile>
  </profiles>
</project>
